--- a/src/main/resources/static/main.css
+++ b/src/main/resources/static/main.css
@@ -1,7 +1,10 @@
-body{
+body {
     padding: 30px 150px;
 }
-.card-view{
+.card-view {
     margin-top: 20px;
     background: #007bff;
-  }
+}
+.text-muted i {
+    color: #007bff;
+}
