--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../static/bootstrap.js">
     <link rel="stylesheet" href="../static/bootstrap.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../static/main.css">
-    <link th:href="@{/bootstrap.js}"/>
-    <link rel="stylesheet" th:href="@{/bootstrap.css}" type="text/css"/>
-    <link rel="stylesheet" th:href="@{/main.css}" type="text/css"/>
+    <link th:href="@{/bootstrap.js}" />
+    <link rel="stylesheet" th:href="@{/bootstrap.css}" type="text/css" />
+    <link rel="stylesheet" th:href="@{/main.css}" type="text/css" />
     <title>Title</title>
 </head>
+
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
+            aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
@@ -38,7 +41,8 @@
             <div class="card">
                 <div class="card-body">
                     <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                        additional content. This content is a little bit longer.</p>
                 </div>
                 <div class="card-footer">
                     <small class="text-muted"><i onclick="like(this)" class="bi bi-heart bi-heart-fill"></i></small>
@@ -48,7 +52,8 @@
                 <img class="card-img-top" src=".../100px180/" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                    <p class="card-text">This card has supporting text below as a natural lead-in to additional content.
+                    </p>
                 </div>
                 <div class="card-footer">
                     <small class="text-muted"><i onclick="like(this)" class="bi bi-heart bi-heart-fill"></i></small>
@@ -58,7 +63,9 @@
                 <img class="card-img-top" src=".../100px180/" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                        additional content. This card has even longer content than the first to show that equal height
+                        action.</p>
                 </div>
                 <div class="card-footer">
                     <small class="text-muted"><i onclick="like(this)" class="bi bi-heart bi-heart-fill"></i></small>
@@ -72,4 +79,5 @@
         }
     </script>
 </body>
+
 </html>
