--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -45,7 +45,11 @@
                         additional content. This content is a little bit longer.</p>
                 </div>
                 <div class="card-footer">
-                    <small class="text-muted"><i onclick="like(this)" class="bi bi-heart bi-heart-fill"></i></small>
+                    <small class="text-muted">
+                        <i onclick="like(this)" class="bi bi-heart bi-heart-fill">
+                        <i class="bi bi-chat-dots"></i>
+                        <i class="bi bi-eye"></i>
+                    </i></small>
                 </div>
             </div>
             <div class="card">
@@ -56,7 +60,11 @@
                     </p>
                 </div>
                 <div class="card-footer">
-                    <small class="text-muted"><i onclick="like(this)" class="bi bi-heart bi-heart-fill"></i></small>
+                    <small class="text-muted">
+                        <i onclick="like(this)" class="bi bi-heart bi-heart-fill"></i>
+                        <i class="bi bi-chat-dots"></i>
+                        <i class="bi bi-eye"></i>
+                    </small>
                 </div>
             </div>
             <div class="card">
@@ -68,7 +76,11 @@
                         action.</p>
                 </div>
                 <div class="card-footer">
-                    <small class="text-muted"><i onclick="like(this)" class="bi bi-heart bi-heart-fill"></i></small>
+                    <small class="text-muted">
+                        <i onclick="like(this)" class="bi bi-heart bi-heart-fill"></i>
+                        <i class="bi bi-chat-dots"></i>
+                        <i class="bi bi-eye"></i>
+                    </small>
                 </div>
             </div>
         </div>
