--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -2,36 +2,23 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../static/bootstrap.css">
-    <link rel="stylesheet" href="../static/main.css">
     <link rel="stylesheet" th:href="@{/bootstrap.css}" type="text/css"/>
     <link rel="stylesheet" th:href="@{/main.css}" type="text/css"/>
     <title>Title</title>
 </head>
 <body class="card-view">
-<form class="card-view" th:action="@{/newPost}">
+<h1 th:text="${text}"></h1>
+<form class="card-view" th:action="@{/newPost}" method="post" enctype="multipart/form-data">
     <div class="form-group">
-        <label for="exampleFormControlTextarea1">Type to post</label>
-        <textarea id="tet" class="form-control" id="exampleFormControlTextarea1"  value="" rows="12"></textarea>
+        <textarea class="form-control" th:text="${text}" name="textarea" rows="12"></textarea>
     </div>
     <div class="custom-file">
-        <label for="exampleFormControlTextarea1"> Select photo for description </label>
-        <input type="file" class="custom-file-input" id="customFile">
-        <label class="custom-file-label" for="customFile">Choose file</label>
+        <input type="file" name="file" class="custom-file-input">
+        <label class="custom-file-label">Choose file</label>
     </div>
     <div style="margin-top: 20px">
-        <input onclick="val()" class="custom-file btn-outline-danger my-2 my-sm-0" type="submit">
+        <input class="custom-file btn-outline-danger my-2 my-sm-0" type="submit">
     </div>
 </form>
-
-<script>
-    function val() {
-        filee = document.getElementById("customFile").value
-        if(filee == "") alert('xato');
-        else alert("to'g'ri");
-        ele = document.getElementById('tet').value;
-
-    }
-</script>
 </body>
 </html>
