img save post save uydagi push. )

--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -15,6 +15,7 @@
     <div class="custom-file">
         <input type="file" name="file" class="custom-file-input">
         <label class="custom-file-label">Choose file</label>
+        <input class="input-group-text" type="text" name="title" id="inputGroup-sizing-lg">Large</input>
     </div>
     <div style="margin-top: 20px">
         <input class="custom-file btn-outline-danger my-2 my-sm-0" type="submit">
