--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -35,7 +35,7 @@
     <div class="card-view">
         <div class="card-deck" th:each="post: ${posts}">
             <div class="card">
-                <img class="card-img-top" th:attr="src=@{'/downloadedImages/' + ${post.imageName}}" alt="Card image cap">
+                <img class="card-img-top" th:src="@{'/getImage/'+${post.imageName}}" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title" th:text="${post.title}">title</h5>
                     <p class="card-text" th:text="${post.postText}">This card has supporting text below as a natural lead-in to additional content.
