--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -2,6 +2,8 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="../static/bootstrap.css">
+    <link rel="stylesheet" href="../static/main.css">
     <link rel="stylesheet" th:href="@{/bootstrap.css}" type="text/css"/>
     <link rel="stylesheet" th:href="@{/main.css}" type="text/css"/>
     <title>Title</title>
