--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -16,13 +16,10 @@
         <div class="form-group">
             <div class="sign">
                 <!-- <input type="text" name="title" id="inputGroup-sizing-lg" placeholder="Bo'limni tanlang"></input> -->
-                <select>
-                    <option>Hikoya</option>
-                    <option>To'qima</option>
-                  </select>
                 <div>
-                    <input type="text" name="login" id="" placeholder="login">
-                    <input type="password" name="parol" id="" placeholder="password">
+                    <input type="text" name="title" placeholder="title">
+                    <input type="text" name="login" placeholder="login">
+                    <input type="password" name="parol" placeholder="password">
                 </div>
             </div>
             <textarea class="form-control" th:text="${text}" name="textarea" rows="12"></textarea>
