--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -27,6 +27,9 @@
                     <a class="nav-link" th:href="@{/posting}"> Create <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
+                    <a class="nav-link" th:href="@{/createUser}"> User </a>
+                </li>
+                <li class="nav-item active">
                     <a class="nav-link" href="#"> About </a>
                 </li>
             </ul>
