--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -11,34 +11,26 @@
 </head>
 
 <body class="card-view">
-    <h1 th:text="${text}"></h1>
-    <form class="card-view" th:action="@{/newPost}" method="post" enctype="multipart/form-data">
-        <div class="form-group">
-            <div class="sign">
-                <div>
-                    <label>
-                        <input type="text" name="title" placeholder="title">
-                    </label>
-                    <label>
-                        <input type="text" name="username" placeholder="login">
-                    </label>
-                    <label>
-                        <input type="password" name="password" placeholder="password">
-                    </label>
-                </div>
+<h1 th:text="${text}"></h1>
+<form class="card-view" th:action="@{/newPost}" method="post" enctype="multipart/form-data">
+    <div class="form-group">
+        <div class="sign">
+            <input type="text" name="title" id="inputGroup-sizing-lg" placeholder="Title"></input>
+            <div>
+                <input type="text" name="login" placeholder="login">
+                <input type="password" name="parol" placeholder="password">
             </div>
-            <label>
-                <textarea class="form-control" th:text="${text}" name="textarea" rows="12"></textarea>
-            </label>
         </div>
-        <div class="custom-file">
-            <input type="file" name="file" class="custom-file-input">
-            <label class="custom-file-label">Choose file</label>
-        </div>
-        <div style="margin-top: 20px">
-            <input class="custom-file btn-danger my-2 my-sm-0" type="submit">
-        </div>
-    </form>
+        <textarea class="form-control" th:text="${text}" name="textarea" rows="12"></textarea>
+    </div>
+    <div class="custom-file">
+        <input type="file" name="file" class="custom-file-input">
+        <label class="custom-file-label">Choose file</label>
+    </div>
+    <div style="margin-top: 20px">
+        <input class="custom-file btn-danger my-2 my-sm-0" type="submit">
+    </div>
+</form>
 </body>
 
 </html>
