--- a/src/main/resources/static/main.css
+++ b/src/main/resources/static/main.css
@@ -25,8 +25,7 @@ body {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 0ch;
-}
-.card-deck {
+}.card-deck {
     margin: 8px 0px;
 }
 .card-deck .card {
