--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -48,7 +48,7 @@
                     <small class="text-muted">
                         <i class="bi bi-heart bi-heart-fill"></i>
                         <i class="bi bi-chat-dots"></i>
-                        <button class="btn btn-outline-primary">View</button>
+                        <button class="btn btn-outline-primary"><a th:href="@{/view(id=${post.id})}">View</a></button>
                     </small>
                 </div>
             </div>
