--- a/src/main/resources/templates/comment.html
+++ b/src/main/resources/templates/comment.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="../static/comment.css">
     <title>Comment</title>
 </head>
+
 <body>
     <div class="container">
         <!-- Post -->
@@ -23,8 +25,39 @@
 
         <!-- Jazilgan Commentlerdi shig'aratir -->
         <div class="comment-show">
-            <p></p>
+
+            <div class="card mb-3" style="max-width: 18rem;">
+                <div class="card-header">Sardording usernamesi</div>
+                <div class="card-body">
+                    <p class="card-text">Sardording jazgan commenti hamde Lorem ipsum dolor sit amet consectetur
+                        adipisicing elit. Est, quisquam.</p>
+                </div>
+            </div>
+            <div class="card mb-3" style="max-width: 18rem;">
+                <div class="card-header">Sardording usernamesi</div>
+                <div class="card-body">
+                    <p class="card-text">Sardording jazgan commenti hamde Lorem ipsum dolor sit amet consectetur
+                        adipisicing elit. Est, quisquam.</p>
+                </div>
+            </div>
+            <div class="card mb-3" style="max-width: 18rem;">
+                <div class="card-header">Sardording usernamesi</div>
+                <div class="card-body">
+                    <p class="card-text">Sardording jazgan commenti hamde Lorem ipsum dolor sit amet consectetur
+                        adipisicing elit. Est, quisquam.</p>
+                </div>
+            </div>
+            <div class="card mb-3" style="max-width: 18rem;">
+                <div class="card-header">Sardording usernamesi</div>
+                <div class="card-body">
+                    <p class="card-text">Sardording jazgan commenti hamde Lorem ipsum dolor sit amet consectetur
+                        adipisicing elit. Est, quisquam.</p>
+                </div>
+            </div>
+
+
         </div>
     </div>
 </body>
+
 </html>
