--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="../static/bootstrap.css">
+    <link rel="stylesheet" href="../static/main.css">
     <link rel="stylesheet" th:href="@{/icon/bootstrap-icons.css}">
     <link th:href="@{/bootstrap.js}" />
     <link rel="stylesheet" th:href="@{/bootstrap.css}" type="text/css" />
@@ -36,13 +39,31 @@
     </nav>
 
     <div class="card-view">
-        <div class="card-deck" >
+        <div class="card-deck">
             <div class="card" th:each="post: ${posts}">
                 <img class="card-img-top" th:src="@{'/getImage/'+${post.imageName}}" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title" th:text="${post.title}">title</h5>
-                    <p class="card-text" th:text="${post.postText}">This card has supporting text below as a natural lead-in to additional content.
+                    <p id="lorem" th:text="${post.postText}">This card has supporting text below as a natural lead-in to
+                        additional content. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam a nesciunt
+                        distinctio sunt facere doloribus, ullam perferendis natus. Ipsa ullam, perferendis sequi
+                        voluptates qui dolore distinctio in laboriosam, reiciendis voluptatibus deserunt vero vitae
+                        impedit ex? Ducimus cumque nisi veritatis deserunt tenetur! Officiis quibusdam quo eligendi
+                        deserunt enim suscipit officia culpa blanditiis nam eum. Esse culpa aliquam dolorum beatae
+                        fugiat tempore unde ipsam at, dolores ea accusantium dicta quidem quaerat voluptate deleniti
+                        nobis voluptatibus earum, incidunt magni? Dolorem atque praesentium illo suscipit consequuntur a
+                        aliquam eum vero voluptates magni quae vel vitae blanditiis quam quasi commodi id aperiam velit
+                        consequatur labore, eius dolorum. Ipsa ad deserunt voluptates impedit officiis atque
+                        necessitatibus, velit non obcaecati nisi. Dolorum quaerat reprehenderit laboriosam perferendis
+                        officia ad mollitia, excepturi libero recusandae culpa eveniet neque nulla accusantium cumque
+                        repellat, deserunt labore quidem. Repudiandae velit veniam, exercitationem temporibus natus,
+                        explicabo voluptas aperiam distinctio doloribus maiores assumenda officiis iusto enim
+                        dignissimos ad sed minus ipsum. Odio debitis doloribus voluptatibus quos tempora ratione ipsum
+                        esse magni modi! Voluptas sunt dolor eligendi asperiores eum provident neque aperiam quidem
+                        iusto illo voluptatem dicta tempore aliquid cum quis voluptatum a, nihil accusamus, obcaecati
+                        necessitatibus, alias nesciunt? Aperiam fuga, officia culpa totam necessitatibus voluptatibus?
                     </p>
+                    <p id="text"></p>
                 </div>
                 <div class="card-footer">
                     <small class="text-muted">
@@ -54,6 +75,23 @@
             </div>
         </div>
     </div>
+
+
+
+    <script>
+        let lorem = document.getElementById('lorem').innerText;
+        let arr = Array.from(lorem);
+        console.log(arr.length);
+        if (arr.length > 149) {
+            for (let i = 0; i < 150; i++) {
+                document.getElementById('text').innerHTML += arr[i];
+            }
+        } else {
+            for (let i = 0; i < arr.length; i++) {
+                document.getElementById('text').innerHTML += arr[i];
+            }
+        }
+    </script>
 </body>
 
 </html>
