--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -67,7 +67,7 @@
                     <p id="text"></p>
                 </div>
                 <div class="card-footer">
-                    <small class="text-muted">
+                    <form class="text-muted">
                         <input type="checkbox" id="chec">
                         <i class="bi bi-heart bi-heart-fill"></i>
                         <label for="chec">
@@ -81,7 +81,7 @@
                               <button class="btn btn-outline-secondary" type="button">More..</button>
                             </div>
                           </div>
-                    </small>
+                    </form>
                 </div>
             </div>
         </div>
